# onyx

./: CMakeLists.txt  LaRank.cpp  LaRank.h  Makefile  README  decision_function.h  larank.cpp  larank.h  output.cpp  output.h  pattern.cpp  pattern.h  pattern_collection.cpp  pattern_collection.h
apps/: CMakeLists.txt  dataset.cpp  dataset.h  main.cpp
cmake/: FindEigen3.cmake  FindMatlab.cmake
larank/: CMakeLists.txt  decision_function.cpp  decision_function.h  larank.cpp  larank.h  pattern.cpp  pattern.h
matlab/: CMakeLists.txt  onyx_app.m
matlab/+onyx/@LinearLaRank/: LinearLaRank.m
matlab/+onyx/@LinearLaRank/private/: larank_mex.cpp  linear_larank_mex.cpp
onyx/: CMakeLists.txt
onyx/larank/: CMakeLists.txt  decision_function.cpp  larank.cpp  larank.h
onyx/linear_larank/: decision_function.cpp  decision_function.h  larank.cpp  larank.h  pattern.cpp  pattern.h
